# isectech-security

./: .buildtrigger  .deployment-state.json  .dockerignore  .gcloudignore  .mcp.json  .npmrc  .redocly.yaml  .spectral.yaml  AI-ML-THREAT-DETECTION-AGENT.md  API-RATE-LIMITING-INFRASTRUCTURE-PROTECTION-AGENT.md  CLAUDE.md  COMPLIANCE-VERIFICATION-AUTOMATION-GUIDE.md  COMPREHENSIVE-TESTING-IMPLEMENTATION-SUMMARY.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-SUCCESS-REPORT.md  DEPLOYMENT_FIX_GUIDE.md  DNS-Infrastructure-Implementation-Summary.md  Dockerfile  Dockerfile.ai  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.production  Dockerfile.frontend.production.buildkit  Dockerfile.simple  EXECUTIVE-ANALYTICS-DASHBOARDS-AGENT.md  MOBILE-NOTIFICATION-SYSTEM-AGENT.md  MULTI-REGION-DEPLOYMENT-AGENT.md  PERFORMANCE-ENGINEERING-AGENT.md  SECURITY-PENETRATION-TESTING-AGENT.md  SECURITY-REMEDIATION-ENGINEERING-EXPERT-AGENT.md  SOC-ML-TRIAGE-IMPLEMENTATION-SUMMARY.md  TASK-49-IMPLEMENTATION-SUMMARY.md  TASK-57-IMPLEMENTATION-SUMMARY.md  TASK-59-IMPLEMENTATION-SUMMARY.md  TASK-SR-3-KONG-ADMIN-SECURITY-SUMMARY.md  app.yaml  cloud-run-backend-services.yaml  cloud-run-frontend.yaml  cloudbuild.buildkit.yaml  cloudbuild.yaml  (+28 more)
.claude/commands/: cont.md  dabl.md 
.github/: CODEOWNERS  branch-protection-rules.md  pull_request_template.md
.github/workflows/: advanced-deployment.yml  api-documentation.yml  build-automation.yml  ci-cd-pipeline.yml  container-security.yml  infrastructure-deployment.yml  performance-testing.yml  pipeline-monitoring.yml  (+5 more)
.storybook/: main.ts  preview.ts
.taskmaster/: state.json
__mocks__/: audio.js  data.js  font.js  image.js  pdf.js  style.js  svg.js  video.js  wasm.js  worker.js
ai-services/: README.md  requirements.txt
app/: layout.tsx  page.tsx
backend/: .gitignore  Makefile  README.md  docker-compose.dev.yml  go.mod  openapi-backend-services.json
backend/services/security-agent/agent-core/: Cargo.toml  build.rs
backend/services/security-agent/agent-core/proto/: isectech_agent.proto
backend/services/security-agent/agent-core/src/: agent.rs  collectors.rs  config.rs  crypto.rs  enforcement.rs  error.rs  lib.rs  main.rs  metrics.rs  platform.rs  security.rs  storage.rs  telemetry.rs  updater.rs
backend/services/security-agent/agent-core/src/communication/: certificates.rs  client.rs  messages.rs  mod.rs  offline.rs  retry.rs  security.rs
backend/services/security-agent/agent-core/src/telemetry/: correlation.rs  mod.rs  performance.rs  processors.rs  threat_detection.rs
backend/services/security-agent/agent-core/src/telemetry/collectors/: application.rs  filesystem.rs  mod.rs  network.rs  process.rs  registry.rs  user_session.rs  vulnerability.rs
deception-technology/: Dockerfile  README.md  docker-compose.yml  environment-assessment.md  health-check.sh
infrastructure/: README.md  complete-iam-bindings.sh  enable-apis-fixed.sh  enable-apis.sh  iam-configuration-complete.md  isectech-kms-configuration.md  isectech-vpc-configuration.md  nameservers.txt  prepare-multi-region-fixed.sh  prepare-multi-region.sh  setup-cloud-kms-complete.sh  setup-cloud-kms-keys.sh  setup-cloud-kms.sh  setup-domain.sh  setup-enterprise-billing.sh  setup-iam-with-delays.sh  setup-iam.sh  setup-load-balancer-fixed.sh  setup-load-balancer.sh  setup-monitoring-logging.sh  setup-vpc-networks-fixed.sh  setup-vpc-networks.sh
monitoring/: README.md  api-validation-monitoring.ts  deception-monitoring.ts  docker-compose.elk.yml  docker-compose.monitoring.yml  ml-system-monitoring.ts  performance-monitoring-system.py  security-validation-results.ts
penetration-testing/: EXECUTIVE-SUMMARY-PENETRATION-TEST-REPORT.md  REMEDIATION-COORDINATION-FRAMEWORK.md  REMEDIATION-EXECUTION-DASHBOARD.md  RETESTING-AND-CLOSURE-REPORT.md  SIRT-TEAM-ASSIGNMENTS.md  TECHNICAL-COMPREHENSIVE-PENETRATION-TEST-REPORT.md  VULNERABILITY-REGISTER-AND-TRACKING.md  automated-penetration-testing-framework.py  continuous-improvement-and-policy-updates.md  continuous-security-scanning-pipeline.py  exploitation-and-impact-validation.md  intelligence-gathering-and-reconnaissance.md  methodology-selection-and-framework.md  production-vulnerability-assessment-tools.py  scope-definition-and-stakeholder-alignment.md  vulnerability-assessment-and-analysis.md
performance-testing/: README.md
playwright/: auth.setup.ts  global-setup.ts  global-teardown.ts  security-analyst-journey.spec.ts  security-dashboard.spec.ts
policy-engine/: README.md
public/: manifest.json  offline.html  service-worker.js
reports/: privileged-containers-elimination-report.md  task-84-pod-security-implementation-summary.md
scripts/: audit-security-context.sh  ci-cd-security-validation.sh  compliance-automation.sh  deploy-security-constraints.sh  docker-build.sh  lighthouse-test.js  run-rbac-comprehensive-tests.ts  run-security-tests.js  test-dockerfile.sh
soc-automation/: Dockerfile  docker-compose.yml  requirements.txt
stories/: SecurityAlert.stories.ts
test-setup/: cross-browser-setup.ts  cross-browser-teardown.ts  database-test-setup.ts  rbac-comprehensive-testing-strategy.md  rbac-test-config.ts
validation/: kong-admin-security-validation.js
(+1561 files in other folders)
